--- a/course-work/helm-chart/templates/consumer-service/deployment.yml
+++ b/course-work/helm-chart/templates/consumer-service/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-consumer-service
+  name: {{ include "fullname" . }}-consumer-service
 spec:
   selector:
     matchLabels:
@@ -13,32 +13,26 @@ spec:
     spec:
       containers:
         - name: consumer-service
-          image: "maks113/valid-page-consumer-service"
+          image: "maks113/valid-page-consumer-service:1.0.0"
           ports:
             - containerPort: 8002
           env:
             - name: PORT
               value: "8002"
-
-              # Mongo
             - name: MONGO_HOST
-              value: {{ include "fullname" . }}-mongo-service
+              value: "{{ include "fullname" . }}-mongo-service"
             - name: MONGO_PORT
               value: "27017"
             - name: MONGO_USER
-              value: {{ .Values.mongo.username }}
+              value: "{{ .Values.mongo.username }}"
             - name: MONGO_PASSWORD
-              value: {{ .Values.mongo.password }}
+              value: "{{ .Values.mongo.password }}"
             - name: MONGO_DB_NAME
               value: "notifications"
-
-            # Kafka configuration
             - name: KAFKA_BROKERS_CSV
               value: "{{ include "fullname" . }}-kafka-service:9092"
             - name: KAFKA_GROUP_ID
               value: {{ .Values.notificationService.serviceId }}
-
-            # Other group IDs
             - name: CONSUMER_SERVICE_GROUP_ID
               value: {{ .Values.consumerService.serviceId }}
             - name: PAGE_CAPTURE_SERVICE_GROUP_ID
@@ -52,7 +46,7 @@ spec:
           resources:
             requests:
               memory: "512Mi"
-              cpu: "500m"
+              cpu: "200m"
             limits:
               memory: "1024Mi"
               cpu: "1000m"
