--- a/course-work/helm-chart/templates/notification-service/deployment.yml
+++ b/course-work/helm-chart/templates/notification-service/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-notifications-service
+  name: {{ include "fullname" . }}-notifications-service
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: notifications-service
-          image: "maks113/valid-page-notification-service"
+          image: "maks113/valid-page-notification-service:1.0.0"
           ports:
             - containerPort: 8001
           env:
@@ -52,7 +52,7 @@ spec:
           resources:
             requests:
               memory: "512Mi"
-              cpu: "500m"
+              cpu: "200m"
             limits:
               memory: "1024Mi"
               cpu: "1000m"
