--- a/course-work/helm-chart/values.yaml
+++ b/course-work/helm-chart/values.yaml
@@ -20,7 +20,8 @@ notificationService:
 
 kafka:
   image: bitnami/kafka:3.9.0
-  volumeSize: 1Gi
+  replicas: 1
+  volumeSize: 200Mi
 
 keycloak:
   image: quay.io/keycloak/keycloak:23.0.7
@@ -31,14 +32,14 @@ postgres:
   replicas: 1
   image: postgres:15
   bdName: keycloak
-  volumeSize: 200Mb
+  volumeSize: 200Mi
   username: keycloak
   password: password
 
 minio:
   replicas: 1
   image: minio/minio:latest
-  volumeSize: 200Mb
+  volumeSize: 200Mi
   rootUser: minioadmin
   rootPassword: minioadmin
   bucket: screenshots
@@ -48,7 +49,7 @@ minio:
 mongo:
   replicas: 1
   image: mongo:4.4.18
-  volumeSize: 200Mb
+  volumeSize: 200Mi
   username: root
   password: example
 
