--- a/course-work/applications/screenshot-requests-service/package.json
+++ b/course-work/applications/screenshot-requests-service/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.57.2",
     "@opentelemetry/instrumentation-express": "^0.47.0",
     "@opentelemetry/instrumentation-http": "^0.57.2",
+    "@opentelemetry/instrumentation-kafkajs": "^0.7.1",
     "@opentelemetry/instrumentation-nestjs-core": "^0.44.0",
     "@opentelemetry/instrumentation-pino": "^0.46.0",
     "@opentelemetry/propagator-b3": "^1.30.1",
