--- a/course-work/applications/consumer-service/Dockerfile
+++ b/course-work/applications/consumer-service/Dockerfile
@@ -2,12 +2,12 @@ FROM node:22.5.1-alpine3.20 as builder
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
 
 WORKDIR /app
 
 COPY ./ ./
 
+RUN npm i -g pnpm
 RUN pnpm i
 RUN pnpm run build
 
@@ -15,7 +15,6 @@ FROM node:22.5.1-alpine3.20
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
 
 WORKDIR /app
 
@@ -23,6 +22,7 @@ COPY --from=builder /app/dist/ ./dist
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/pnpm-lock.yaml ./
 
+RUN npm i -g pnpm
 RUN pnpm i --prod
 
-ENTRYPOINT ["npm", "run", "start"]
+ENTRYPOINT ["node", "dist/main"]
