--- a/course-work/applications/notifications-service/package.json
+++ b/course-work/applications/notifications-service/package.json
@@ -27,7 +27,6 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.3",
-    "@willsoto/nestjs-prometheus": "^6.0.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.56.0",
     "@opentelemetry/context-async-hooks": "^1.30.1",
@@ -48,8 +47,10 @@
     "@opentelemetry/sdk-node": "^0.57.2",
     "@opentelemetry/sdk-trace-base": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "corepack": "^0.32.0",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.9.5",
     "nestjs-pino": "^4.3.0",
