--- a/course-work/applications/page-capture-service/Dockerfile
+++ b/course-work/applications/page-capture-service/Dockerfile
@@ -1,21 +1,20 @@
-FROM node:22.5.1 as builder
+FROM node:22.5.1-alpine3.20 as builder
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
 
 WORKDIR /app
 
 COPY ./ ./
 
+RUN npm i -g pnpm
 RUN pnpm i
 RUN pnpm run build
 
-FROM node:22.5.1
+FROM node:22.5.1-alpine3.20
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 ENV PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
@@ -31,6 +30,7 @@ COPY --from=builder /app/dist/ ./dist
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/pnpm-lock.yaml ./
 
+RUN npm i -g pnpm
 RUN pnpm i --prod
 
-ENTRYPOINT ["npm", "run", "start"]
+ENTRYPOINT ["node", "dist/main"]
