--- a/course-work/valid-page-chart/templates/notification-service/deployment.yml
+++ b/course-work/valid-page-chart/templates/notification-service/deployment.yml
@@ -1,54 +1,42 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "fullname" . }}-screenshot-meta
+  name: {{ include "fullname" . }}-notifications-service
 spec:
   selector:
     matchLabels:
-      app: screenshot-meta
+      app: notifications-service
   template:
     metadata:
       labels:
-        app: screenshot-meta
+        app: notifications-service
     spec:
       containers:
-        - name: screenshot-meta
-          image: "maks113/valid-page-screenshot-meta-service:1.0.0"
+        - name: notifications-service
+          image: "maks113/valid-page-notification-service:1.0.1"
           ports:
-            - containerPort: 8004
+            - containerPort: 8001
           env:
             - name: PORT
-              value: "8004"
+              value: "8001"
 
               # Mongo
             - name: MONGO_HOST
-              value: {{ include "fullname" . }}-mongo-service
+              value: {{ .Release.Name }}-mongodb-headless
             - name: MONGO_PORT
               value: "27017"
             - name: MONGO_USER
-              value: {{ .Values.mongo.username }}
+              value: {{ .Values.notificationService.mongoUser }}
             - name: MONGO_PASSWORD
-              value: {{ .Values.mongo.password }}
+              value: {{ .Values.notificationService.mongoPassword }}
             - name: MONGO_DB_NAME
               value: "notifications"
 
             # Kafka configuration
             - name: KAFKA_BROKERS_CSV
-              value: "{{ include "fullname" . }}-kafka-service:9092"
+              value: "{{ .Release.Name }}-kafka-controller-headless:9092"
             - name: KAFKA_GROUP_ID
-              value: {{ .Values.screenshotMetaService.serviceId }}
-
-            # MinIO configuration
-            - name: MINIO_ENDPOINT
-              value: {{ include "fullname" . }}-minio-service
-            - name: MINIO_PORT
-              value: "9000"
-            - name: MINIO_ACCESS_KEY
-              value: {{ .Values.minio.accessKey }}
-            - name: MINIO_SECRET_KEY
-              value: {{ .Values.minio.secretKey }}
-            - name: MINIO_BUCKET
-              value: {{ .Values.minio.bucket }}
+              value: {{ .Values.notificationService.serviceId }}
 
             # Other group IDs
             - name: CONSUMER_SERVICE_GROUP_ID
