--- a/course-work/valid-page-chart/Chart.yaml
+++ b/course-work/valid-page-chart/Chart.yaml
@@ -9,20 +9,26 @@ dependencies:
     version: "31.5.0"
     repository: https://charts.bitnami.com/bitnami
   - name: jaeger
-    version: 5.1.12
+    version: "5.1.12"
     repository: https://charts.bitnami.com/bitnami
   - name: mongodb
-    version: 12.1.16
+    version: "12.1.16"
     repository: https://charts.bitnami.com/bitnami
   - name: keycloak
-    version: 24.4.13
+    version: "24.4.13"
     repository: https://charts.bitnami.com/bitnami
   - name: minio
-    version: 15.0.7
+    version: "15.0.7"
     repository: https://charts.bitnami.com/bitnami
   - name: grafana
-    version: 11.6.0
+    version: "11.6.0"
     repository: https://charts.bitnami.com/bitnami
   - name: kafka-ui
     version: "0.7.6"
     repository:  https://provectus.github.io/kafka-ui-charts
+  - name: redis
+    version: "20.11.4"
+    repository: https://charts.bitnami.com/bitnami
+  - name: prometheus
+    version: "1.4.9"
+    repository: https://charts.bitnami.com/bitnami
