--- a/course-work/valid-page-chart/templates/gateway/ingress.yml
+++ b/course-work/valid-page-chart/templates/gateway/ingress.yml
@@ -2,23 +2,26 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-api-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - host: arch.homework
       http:
         paths:
-          - path: /requests
-            pathType: Prefix
+          - path: /meta(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: {{ .Release.Name }}
+                name: {{ include "fullname" . }}-screenshot-meta-service
                 port:
-                  number: 3000
-          - path: /meta
-            pathType: Prefix
+                  number: 8004
+          - path: /req(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: {{ .Release.Name }}
+                name: {{ include "fullname" . }}-screenshot-requests-service
                 port:
                   number: 3000
