--- a/course-work/valid-page-chart/templates/notification-service/deployment.yml
+++ b/course-work/valid-page-chart/templates/notification-service/deployment.yml
@@ -1,40 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "fullname" . }}-notifications-service
+  name: {{ include "fullname" . }}-notifications
 spec:
   selector:
     matchLabels:
-      app: notifications-service
+      app: notifications
   template:
     metadata:
       labels:
-        app: notifications-service
+        app: notifications
     spec:
       containers:
-        - name: notifications-service
-          image: "maks113/valid-page-notification-service:1.0.1"
+        - name: notifications
+          image: "{{ .Values.notificationService.image }}:{{ .Values.notificationService.tag }}"
           ports:
             - containerPort: 8001
           env:
             - name: PORT
               value: "8001"
 
-              # Mongo
-            - name: MONGO_HOST
-              value: {{ .Release.Name }}-mongodb-headless
-            - name: MONGO_PORT
-              value: "27017"
-            - name: MONGO_USER
-              value: {{ .Values.notificationService.mongoUser }}
-            - name: MONGO_PASSWORD
-              value: {{ .Values.notificationService.mongoPassword }}
-            - name: MONGO_DB_NAME
-              value: "notifications"
-
             # Kafka configuration
             - name: KAFKA_BROKERS_CSV
-              value: "{{ .Release.Name }}-kafka-controller-headless:9092"
+              value: {{ tpl .Values.notificationService.kafkaBrokers . }}
             - name: KAFKA_GROUP_ID
               value: {{ .Values.notificationService.serviceId }}
 
@@ -49,6 +37,10 @@ spec:
               value: {{ .Values.notificationService.serviceId }}
             - name: SCREENSHOT_REQUEST_SERVICE_GROUP_ID
               value: {{ .Values.screenshotRequestsService.serviceId }}
+
+            # tracing
+            - name: OTEL_TRACE_COLLECTOR_URL
+              value: 'http://{{ .Release.Name }}-jaeger-collector:4317'
           resources:
             requests:
               memory: "512Mi"
