--- a/course-work/valid-page-chart/templates/page-capture-service/deployment.yml
+++ b/course-work/valid-page-chart/templates/page-capture-service/deployment.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "fullname" . }}-page-capture
 spec:
+  replicas: {{ .Values.pageCaptureService.replicas }}
   selector:
     matchLabels:
       app: page-capture
@@ -13,7 +14,7 @@ spec:
     spec:
       containers:
         - name: page-capture
-          image: "maks113/valid-page-page-capture-service:1.0.0"
+          image: "{{ .Values.pageCaptureService.image }}:{{ .Values.pageCaptureService.tag }}"
           ports:
             - containerPort: 8003
           env:
@@ -22,33 +23,36 @@ spec:
 
               # Mongo
             - name: MONGO_HOST
-              value: {{ include "fullname" . }}-mongo-service
+              value: {{ .Release.Name }}-mongodb-headless
             - name: MONGO_PORT
               value: "27017"
             - name: MONGO_USER
-              value: {{ .Values.mongo.username }}
+              value: {{ .Values.screenshotMetaService.mongoUser }}
             - name: MONGO_PASSWORD
-              value: {{ .Values.mongo.password }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ tpl .Values.screenshotMetaService.mongoPasswordSecret . }}
+                  key: {{ .Values.screenshotMetaService.mongoPasswordSecretKey }}
             - name: MONGO_DB_NAME
-              value: "notifications"
+              value: "page-capture"
 
             # Kafka configuration
             - name: KAFKA_BROKERS_CSV
-              value: "{{ include "fullname" . }}-kafka-service:9092"
+              value: {{ tpl .Values.pageCaptureService.kafkaBrokers . }}
             - name: KAFKA_GROUP_ID
-              value: {{ .Values.notificationService.serviceId }}
+              value: {{ .Values.pageCaptureService.serviceId }}
 
             # MinIO configuration
             - name: MINIO_ENDPOINT
-              value: {{ include "fullname" . }}-minio-service
+              value: {{ .Release.Name }}-minio
             - name: MINIO_PORT
               value: "9000"
             - name: MINIO_ACCESS_KEY
-              value: {{ .Values.minio.accessKey }}
+              value: {{ .Values.pageCaptureService.minio.accessKey }}
             - name: MINIO_SECRET_KEY
-              value: {{ .Values.minio.secretKey }}
+              value: {{ .Values.pageCaptureService.minio.secretKey }}
             - name: MINIO_BUCKET
-              value: {{ .Values.minio.bucket }}
+              value: {{ .Values.pageCaptureService.minio.bucket }}
 
             # Puppeteer configuration
             - name: PUPPETEER_EXECUTABLE_PATH
@@ -65,6 +69,10 @@ spec:
               value: {{ .Values.notificationService.serviceId }}
             - name: SCREENSHOT_REQUEST_SERVICE_GROUP_ID
               value: {{ .Values.screenshotRequestsService.serviceId }}
+
+            # tracing
+            - name: OTEL_TRACE_COLLECTOR_URL
+              value: 'http://{{ .Release.Name }}-jaeger-collector:4317'
           resources:
             requests:
               memory: "512Mi"
