--- a/course-work/valid-page-chart/templates/page-capture-service/service.yml
+++ b/course-work/valid-page-chart/templates/page-capture-service/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fullname" . }}-page-capture
+  name: {{ include "fullname" . }}-page-capture-service
 spec:
   type: ClusterIP
   ports:
