--- a/course-work/valid-page-chart/templates/screenshot-meta-service/service.yml
+++ b/course-work/valid-page-chart/templates/screenshot-meta-service/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fullname" . }}-screenshot-meta
+  name: {{ include "fullname" . }}-screenshot-meta-service
 spec:
   type: ClusterIP
   ports:
