--- a/course-work/valid-page-chart/templates/screenshot-requests-service/deployment.yml
+++ b/course-work/valid-page-chart/templates/screenshot-requests-service/deployment.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: screenshot-requests
-          image: "maks113/valid-page-screenshot-requests-service:1.0.0"
+          image: "{{ .Values.screenshotRequestsService.image }}:{{ .Values.screenshotRequestsService.tag }}"
           ports:
             - containerPort: 8000
           env:
@@ -22,33 +22,24 @@ spec:
 
               # Mongo
             - name: MONGO_HOST
-              value: {{ include "fullname" . }}-mongo-service
+              value: {{ .Release.Name }}-mongodb-headless
             - name: MONGO_PORT
               value: "27017"
             - name: MONGO_USER
-              value: {{ .Values.mongo.username }}
+              value: {{ .Values.screenshotRequestsService.mongoUser }}
             - name: MONGO_PASSWORD
-              value: {{ .Values.mongo.password }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ tpl .Values.screenshotRequestsService.mongoPasswordSecret . }}
+                  key: {{ .Values.screenshotRequestsService.mongoPasswordSecretKey }}
             - name: MONGO_DB_NAME
-              value: "notifications"
+              value: "screenshot-requests"
 
             # Kafka configuration
             - name: KAFKA_BROKERS_CSV
-              value: "{{ include "fullname" . }}-kafka-service:9092"
+              value: {{ tpl .Values.screenshotRequestsService.kafkaBrokers . }}
             - name: KAFKA_GROUP_ID
-              value: {{ .Values.screenshotMetaService.serviceId }}
-
-            # MinIO configuration
-            - name: MINIO_ENDPOINT
-              value: {{ include "fullname" . }}-minio-service
-            - name: MINIO_PORT
-              value: "9000"
-            - name: MINIO_ACCESS_KEY
-              value: {{ .Values.minio.accessKey }}
-            - name: MINIO_SECRET_KEY
-              value: {{ .Values.minio.secretKey }}
-            - name: MINIO_BUCKET
-              value: {{ .Values.minio.bucket }}
+              value: {{ .Values.screenshotRequestsService.serviceId }}
 
             # Other group IDs
             - name: CONSUMER_SERVICE_GROUP_ID
@@ -61,6 +52,10 @@ spec:
               value: {{ .Values.notificationService.serviceId }}
             - name: SCREENSHOT_REQUEST_SERVICE_GROUP_ID
               value: {{ .Values.screenshotRequestsService.serviceId }}
+
+            # tracing
+            - name: OTEL_TRACE_COLLECTOR_URL
+              value: 'http://{{ .Release.Name }}-jaeger-collector:4317'
           resources:
             requests:
               memory: "512Mi"
@@ -68,3 +63,21 @@ spec:
             limits:
               memory: "1024Mi"
               cpu: "1000m"
+
+        - name: gatekeeper
+          image: quay.io/gogatekeeper/gatekeeper:1.4.2
+          args:
+            - '--config'
+            - /etc/gatekeeper/config.yaml
+          ports:
+            - containerPort: 3000
+              name: api
+              protocol: TCP
+          volumeMounts:
+            - mountPath: /etc/gatekeeper
+              name: gatekeeper-config
+      volumes:
+        - name: gatekeeper-config
+          secret:
+            secretName: {{ .Release.Name }}-gatekeeper-secret
+            defaultMode: 420
