--- a/course-work/applications/screenshot-meta-service/package.json
+++ b/course-work/applications/screenshot-meta-service/package.json
@@ -48,6 +48,8 @@
     "@opentelemetry/sdk-node": "^0.57.2",
     "@opentelemetry/sdk-trace-base": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.30.0",
+    "minio": "^8.0.4",
+    "express": "^4.21.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "kafkajs": "^2.2.4",
