--- a/homework-6/chart/templates/app/gatekeeper.secret.yml
+++ b/homework-6/chart/templates/app/gatekeeper.secret.yml
@@ -4,16 +4,16 @@ metadata:
   name: {{ .Release.Name }}-gatekeeper-secret
 stringData:
   config.yaml: |
-    client-id: valid-page
-    client-secret: lmj9m7NKq8hhM5L4fzOjiXNUU6aHLMu3
-    discovery-url: http://keycloak.arch.homework/realms/valid-page/.well-known/openid-configuration
+    client-id: hw6
+    client-secret: u6iHIt8DZS6msnJXthy292OWQGZuXMpC
+    discovery-url: http://keycloak.arch.homework/realms/hw6/.well-known/openid-configuration
     enable-default-deny: true
     enable-logout-redirect: true
     enable-json-logging: true
     enable-metrics: false
     enable-refresh-tokens: true
     enable-session-cookies: false
-    store-url: redis://valid-page-redis-replicas:6379
+    store-url: redis://hw6-redis-replicas:6379
     no-redirects: true
     encryption-key: aD3P1N5yVuI64gEzihF2SVCyCSB0TmiU
     skip-openid-provider-tls-verify: true
