--- a/homework-6/chart/Chart.yaml
+++ b/homework-6/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: homework-4
+name: homework-6
 description: A Helm chart
 version: 1.0.0
 appVersion: "1.0"
@@ -10,4 +10,7 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
   - name: keycloak
     version: "24.4.13"
+    repository: https://charts.bitnami.com/bitnami
+  - name: redis
+    version: "20.11.4"
     repository: https://charts.bitnami.com/bitnami
