--- a/homework-7/applications/order-service/package.json
+++ b/homework-7/applications/order-service/package.json
@@ -20,29 +20,33 @@
     "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^11.0.6",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.5",
     "@willsoto/nestjs-prometheus": "^6.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.8.1",
     "nestjs-pino": "^4.1.0",
     "pino-http": "^10.3.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
